--- a/catalog.html
+++ b/catalog.html
@@ -10,20 +10,20 @@
       <nav class="main-navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="main.html">Главная</a>
+            <a class="navigation-link navigation-text" href="main.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
+            <a class="navigation-link navigation-text" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="hotels.html">Гостиницы</a>
+            <a class="navigation-link navigation-link-current navigation-text" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo"  src="images\sedona.svg" width="139" height="70" alt="Логотип Седона">
           </a>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
+          <li class="navigation-item navigation-serch">
             <a class="navigation-link" href="#">
               <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_3_16)">
@@ -38,7 +38,7 @@
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-favourite">
             <a class="navigation-link" href="#">
               <svg class="navigation-icon-favourite" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z" fill="black"/>
@@ -63,8 +63,26 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
+              <svg class="breadcrumbs-home" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_5_558)">
+                <path d="M6 0.300049L0 5.80005V12H12V5.80005L6 0.300049ZM11 11H1V6.20005L6 1.70005L11 6.20005V11Z"/>
+                <path d="M4 10H5V7.5H7V10H8V6.5H4V10Z"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_5_558">
+                <rect width="12" height="12"/>
+                </clipPath>
+                </defs>
+                </svg>
               <span class="visually-hidden">Главная</span>
             </a>
+          </li>
+          <li class="breadcrumbs-item">
+            <span class="breadcrumbs-svg">
+              <svg class="breadcrumbs-vector" width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.8 3.60005L0.999999 0.200049C0.799999 4.88311e-05 0.399999 4.88311e-05 0.0999989 0.200049C-0.200001 0.400049 -0.100001 0.800049 0.0999989 1.00005L3.4 4.00005L0.199999 7.00005C-1.11759e-06 7.20005 -1.11759e-06 7.60005 0.199999 7.80005C0.199999 7.90005 0.499999 8.00005 0.599999 8.00005C0.699999 8.00005 0.899999 7.90005 0.999999 7.80005L4.8 4.40005C5.1 4.20005 5.1 3.80005 4.8 3.60005Z"/>
+                </svg>
+            </span>
           </li>
           <li class="breadcrumbs-item">
             <span class="breadcrumbs-name">Гостиницы</span>
@@ -81,8 +99,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="checkbox"
                   name="Бассейн"
                   checked
@@ -94,8 +111,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="checkbox"
                   name="Парковка"
                   checked
@@ -107,8 +123,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="checkbox"
                   name="Wi-Fi"
                 />
@@ -124,8 +139,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="radio"
                   name="hotel"
                   checked
@@ -137,8 +151,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="radio"
                   name="motel"
                 />
@@ -149,8 +162,7 @@
             <li class="catalog-filter-item">
               <label class="control">
                 <input
-                  class="visually-hidden"
-                  control-input
+                  class="visually-hidden control-input"
                   type="radio"
                   name="apartaments"
                 />
@@ -162,24 +174,33 @@
         </fieldset>
         <fieldset class="catalog-filter-price">
           <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-          <button class="range-toggie" toggle-min type="button">
+          <div class="range">
+          <div class="range-wrapper-inputs">
+          <input
+          class="catalog-filter-input input-min"
+          type="number"
+          name="min-price"
+          placeholder="от"
+          value="0"
+        />
+        <input
+          class="catalog-filter-input input-max"
+          type="number" value="9000"
+          name="max-price"
+          placeholder="до"
+        />
+      </div>
+      <div class="range-scale">
+        <div class="range-bar" style="right: 60px; width: 227px">
+          <button class="range-toggle toggle-min" type="button">
             <span class="visually-hidden">Изменить минимальную стоимость</span>
           </button>
-          <button class="range-toggie" toggle-min type="button">
+          <button class="range-toggle toggle-max" type="button">
             <span class="visually-hidden">Изменить максимальную стоимость</span>
           </button>
-          <input
-            class="catalog-filter-input"
-            type="number"
-            name="min-price"
-            placeholder="от"
-          />
-          <input
-            class="catalog-filter-input"
-            type="number"
-            name="max-price"
-            placeholder="до"
-          />
+        </div>
+        </div>
+      </div>
         </fieldset>
         <div class="button-column">
           <button class="button button-apply" type="submit">Применить</button>
@@ -193,12 +214,14 @@
       <div class="sorting-container">
         <p class="hotel-number">Найдено гостиниц: 38</p>
       <form class="sorting-type">
+        <div class="select-type">
         <label class="visually-hidden" for="sorting">Сортировка</label>
         <select class="select-control" id="sorting" name="sorting">
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогые</option>
           <option value="popular">Сначала популярные</option>
         </select>
+      </div>
         <button class="visually-hidden" type="submit">Отсортировать</button>
       </form>
       <a href="#" class="card-grid-toggle">
@@ -219,7 +242,7 @@
           </svg>
         <span class="visually-hidden">Показать на весь экран</span>
       </a>
-      <a href="#" class="card-grid-toggle">
+      <a href="#" class="card-grid-toggle card-grid-toggle-current">
         <svg width="16" height="14" aria-hidden="true" focusable="false" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M2 0H0V2H2V0Z" fill="black"/>
           <path d="M16 0H4V2H16V0Z" fill="black"/>
@@ -355,13 +378,16 @@
           <a class="pagination-link" href="#">10</a>
         </li>
       </ul>
+      <p class="sorting-number-label">Гостиниц на странице:</p>
       <div class="sorting-number">
         <form class="sorting-number">
-          <label for="sorting-number-label">Гостиниц на странице:</label>
+          <div class="select-number">
+          <label class="visually-hidden" for="sorting-number-label">Гостиниц на странице:</label>
           <select class="select-control-amount" id="sorting-number" name="sorting-number">
             <option value="four">4</option>
             <option value="six">6</option>
           </select>
+        </div>
         </form>
       </div>
 
@@ -396,16 +422,39 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link social-link-tw" href="#">
+            <svg class="social-icon" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_5_791)">
+              <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z"/>
+              </g>
+              <defs>
+              <clipPath id="clip0_5_791">
+              <rect width="18" height="15"/>
+              </clipPath>
+              </defs>
+              </svg>
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link social-link-fb" href="#">
+            <svg class="social-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z"/>
+              </svg>
             <span class="visually-hidden">Фэйсбук</span>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link social-link-yt" href="#">
+            <svg class="social-icon" width="20" height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_3_193)">
+              <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z"/>
+              </g>
+              <defs>
+              <clipPath id="clip0_3_193">
+              <rect width="20" height="16" fill="white"/>
+              </clipPath>
+              </defs>
+              </svg>
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
