--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       <nav class="main-navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="main.html">Главная</a>
+            <a class="navigation-link navigation-link-current navigation-text" href="main.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
+            <a class="navigation-link navigation-text" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+            <a class="navigation-link navigation-text" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo"  src="images/sedona.svg" width="139" height="70" alt="Логотип Седона">
          </a>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
+          <li class="navigation-item navigation-serch">
             <a class="navigation-link" href="#">
               <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_3_16)">
@@ -42,7 +42,7 @@
 
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-favourite">
             <a class="navigation-link"  href="#">
               <svg class="navigation-icon-favourite" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z"/>
@@ -51,6 +51,43 @@
                 </svg>
               <span class="visually-hidden">Избранное</span>
             </a>
+            <div class="popover popover-favourite popover-open">
+              <div class="popover-content">
+              <ul class="popover-items-list">
+                <li class="popover-item">
+                  <img class="popover-hotel" src="../htmlcss/images/hotel-2-small.png" alt="small-hotel-foto" width="48"
+                  height="48">
+                  <p class="hotel-name">Desert Quail Inn</p>
+                  <p class="hotel-type">Мотель</p>
+                  <button class="popover-item-button button">
+                    <svg class="popover-cart" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
+                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
+                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.7C6.8001 5.4 6.5001 5.1 6.2001 5.1C5.9001 5.1 5.6001 5.4 5.6001 5.7V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
+                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.7C10.3001 5.4 10.0001 5.1 9.7001 5.1C9.4001 5.1 9.1001 5.5 9.1001 5.7V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
+                      </svg>
+                    <span class="visually-hidden">удалить из избранного</span>
+                  </button>
+                </li>
+                <li class="popover-item">
+                  <img class="popover-hotel" src="../htmlcss/images/hotel-3-small.png" alt="small-hotel-foto" width="48"
+                  height="48">
+                  <p class="hotel-name">Villas at Poco Diablo</p>
+                  <p class="hotel-type">Апартаменты</p>
+                  <button class="button popover-item-button">
+                    <svg class="popover-cart" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
+                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
+                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.7C6.8001 5.4 6.5001 5.1 6.2001 5.1C5.9001 5.1 5.6001 5.4 5.6001 5.7V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
+                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.7C10.3001 5.4 10.0001 5.1 9.7001 5.1C9.4001 5.1 9.1001 5.5 9.1001 5.7V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
+                      </svg>
+                    <span class="visually-hidden">удалить из избранного</span>
+                  </button>
+                </li>
+              </ul>
+              <button class="button popover-button-all">все избранные</button>
+              </div>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="button button-in" href="#">Хочу сюда</a>
@@ -193,7 +230,7 @@
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
          <p class="newsletter-subscribtion">Только полезная информация и никакого спама,честное бойскаутское!</p>
              <form class="subscribtion-form" action="https://echo.htmlacademy.ru/" method="post">
-                <input class="field" type="email" name="newsletter-email" placeholder="Ваш e-mail">
+                <input class="field" type="email" name="newsletter-email" id="newsletter-email" required placeholder="Ваш e-mail">
                 <button class="button-newsletter-button" type="submit">Подписаться</button>
              </form>
     </section>
@@ -206,16 +243,39 @@
     <ul class="social-list">
       <li class="social-item">
         <a class="social-link social-link-tw" href="#">
+          <svg class="social-icon" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_5_791)">
+            <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_5_791">
+            <rect width="18" height="15"/>
+            </clipPath>
+            </defs>
+            </svg>
           <span class="visually-hidden">Твиттер</span>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link social-link-fb" href="#">
+          <svg class="social-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z"/>
+            </svg>
           <span class="visually-hidden">Фэйсбук</span>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link social-link-yt" href="#">
+          <svg class="social-icon" width="20" height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_3_193)">
+            <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_3_193">
+            <rect width="20" height="16" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
           <span class="visually-hidden">Ютуб</span>
         </a>
       </li>
@@ -244,5 +304,31 @@
     </section>
   </div>
   </footer>
+  <div class="modal-container">
+    <div class="modal modal-serch">
+      <h2 class="modal-title">поиск гостиницы в седоне</h2>
+      <button class="button modal-close-button"></button>
+      <span class="visually-hidden">закрыть</span>
+      <section class="modal-content">
+        <form class="appointment-form" action="https://echo.htmlacademy.ru/"
+        method="post">
+        <label class="modal-label" for="appointment-arrival-date">Дата заезда:</label>
+        <input class="modal-date" type="text" name="arrival-date" id="arrival-date" required placeholder="27 апреля 2020">
+        <p class="arrival-required">Мы не можем отправить вас в прошлое</p>
+      <label class="modal-label-out" for="appointment-departure-date">Дата выезда:</label>
+      <input class="modal-date-out" type="text" name="departure-date" id="departure-date" required placeholder="1 сентября 2021">
+      <p class="departure-required">На эти даты есть свободные номера. Пока есть.</p>
+      <label class="modal-label-old" for="appointment-adults">Взрослые:</label>
+      <input class="modal-humans modal-humans-old" type="number" name="adults" id="appointment-adults" required placeholder="2">
+      <label class="modal-label-kids" for="appointment-kids">Дети:</label>
+      <button class="button button-info">
+        <span class="visually-hidden">посмотреть дополнительную информацию</span>
+      </button>
+      <input class="modal-humans modal-humans-kids" type="number" name="kids" id="appointment-kids" required placeholder="1">
+    </form>
+    <button class="batton modal-button-serch">найти</button>
+      </section>
+    </div>
+  </div>
   </body>
 </html>
