--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </li>
           <li class="navigation-item">
-            <a class="button button-in" href="#">Хочу сюда</a>
+            <a class="navigation-link button-in" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -121,7 +121,7 @@
       </div>
       <div class="intro">
       <p class="city-intro">
-        Седона — небольшой городок в Аризоне,заслуживающий большего!
+        Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
       </p>
       <p class="advantages-intro">
         Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
@@ -132,11 +132,10 @@
         <ul class="advantages-list">
         <div class="advantages-city">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h3 class="advantages-title">Настоящий<br>городок</h3>
             <span>— №1 —</span>
             <p class="advantages-discription">
-              Седона - не аттракцион для туристов, там течёт
-              своя жизнь
+              Седона - не аттракцион<br>для туристов, там течёт<br>своя жизнь
             </p>
           </li>
           <li class="advantages-item">
@@ -164,7 +163,7 @@
             </svg>
           <h3 class="info-title">Жильё</h3>
           <p class="info-discription">
-            Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!
           </p>
         </li>
         <li class="info-item info-eat">
@@ -178,7 +177,7 @@
             </svg>
           <h3 class="info-title">Еда</h3>
           <p class="info-discription">
-            Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+            Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!
           </p>
         </li>
         <li class="info-item info-gift">
@@ -194,7 +193,7 @@
             </svg>
           <h3 class="info-title">Сувениры</h3>
           <p class="info-discription">
-            Не только китайского, но и настоящего местного производства!
+            Не только китайского,<br>но и настоящего местного<br>производства!
           </p>
         </li>
       </ul>
@@ -204,11 +203,11 @@
       <ul class="advantages-list">
       <div class="advantages-canyon">
         <li class="advantages-item">
-          <h3 class="advantages-title">Там есть Мост дьявола</h3>
+          <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
           <span>— №2 —</span>
           <p class="advantages-discription">
-            Да, по нему можно пройти! Если конечно вы
-            осмелитесь
+            Да, по нему можно пройти!<br>Если вы
+            осмелитесь,<br>разумеется
           </p>
         </li>
         <li class="advantages-item">
@@ -217,36 +216,36 @@
       </div>
         <div class="advantages-columns">
         <li class="advantages-item advantages-place">
-          <h3 class="advantages-title">небольшая площадь</h3>
+          <h3 class="advantages-title">небольшая<br>площадь</h3>
           <span>— №3 —</span>
           <p class="advantages-discription">
-           все достопримечательности находятся очень близко
+           Все достопримечательности<br>находятся очень близко
           </p>
         </li>
         <li class="advantages-item advantages-road">
-          <h3 class="advantages-title">красивая дорога</h3>
+          <h3 class="advantages-title">красивая<br>дорога</h3>
           <span>— №4 —</span>
           <p class="advantages-discription">
-            ехать в седону из лас-вегаса совсем не скучно!
+            Ехать в Седону из Лас-Вегаса<br>совсем не скучно!
           </p>
         </li>
         <li class="advantages-item advantages-tripper">
-          <h3 class="advantages-title">мало туристов</h3>
+          <h3 class="advantages-title">мало<br>туристов</h3>
           <span>— №5 —</span>
           <p class="advantages-discription">
-            большинство едет в гранд каньон и толпится там
+            Большинство едет в Гранд<br>Каньон и толпится там
           </p>
         </li>
       </div>
       </ul>
       <section class="hotel-serch">
         <h2 class="hotel-serch-title">Заинтересовались?</h2>
-        <p class="hotel-serch-form">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="hotel-serch-form">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button button-serch" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
     <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-         <p class="newsletter-subscribtion">Только полезная информация и никакого спама,честное бойскаутское!</p>
+         <p class="newsletter-subscribtion">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
              <form class="subscribtion-form" action="https://echo.htmlacademy.ru/" method="post">
                 <input class="field" type="email" name="newsletter-email" id="newsletter-email" required placeholder="Ваш e-mail">
                 <button class="button-newsletter-button" type="submit">Подписаться</button>
@@ -261,7 +260,7 @@
     <ul class="social-list">
       <li class="social-item">
         <a class="social-link social-link-tw" href="#">
-          <svg class="social-icon" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
+          <svg class="social-icon social-tw" width="18" height="15" viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_5_791)">
             <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z"/>
             </g>
@@ -276,7 +275,7 @@
       </li>
       <li class="social-item">
         <a class="social-link social-link-fb" href="#">
-          <svg class="social-icon" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+          <svg class="social-icon social-fb" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
             <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z"/>
             </svg>
           <span class="visually-hidden">Фэйсбук</span>
@@ -284,7 +283,7 @@
       </li>
       <li class="social-item">
         <a class="social-link social-link-yt" href="#">
-          <svg class="social-icon" width="20" height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
+          <svg class="social-icon social-yt" width="20" height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_3_193)">
             <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z"/>
             </g>
